--- a/index.html
+++ b/index.html
@@ -337,11 +337,13 @@
     <section>
         <div class="ml-[25px] sm:ml-[180px] md:ml-[220px] lg:ml-[380px] xl:ml-[480px] 2xl:ml-[560px]">
             <div class=" group mb-[20px] -mt-[20px] mx-[120px] px-3">
+                <a href="https://github.com/root-codes">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github text-white bg-[#21212e] rounded-full p-2 group-hover:bg-[#793fff] group-hover:text-white cursor-pointer duration-150" viewBox="0 0 16 16">
                     <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
                   </svg>
             </div>
             <div class=" group mb-[20px] px-3 -mt-[50px] mx-[160px]">
+                <a href="https://twitter.com/toor_ctrl">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-twitter text-white bg-[#21212e] rounded-full p-2 group-hover:bg-[#793fff] group-hover:text-white cursor-pointer duration-150" viewBox="0 0 16 16">
                     <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
                   </svg>
@@ -351,6 +353,13 @@
                     <path d="M13.545 2.907a13.227 13.227 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.19 12.19 0 0 0-3.658 0 8.258 8.258 0 0 0-.412-.833.051.051 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.041.041 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032c.001.014.01.028.021.037a13.276 13.276 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019c.308-.42.582-.863.818-1.329a.05.05 0 0 0-.01-.059.051.051 0 0 0-.018-.011 8.875 8.875 0 0 1-1.248-.595.05.05 0 0 1-.02-.066.051.051 0 0 1 .015-.019c.084-.063.168-.129.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.052.052 0 0 1 .053.007c.08.066.164.132.248.195a.051.051 0 0 1-.004.085 8.254 8.254 0 0 1-1.249.594.05.05 0 0 0-.03.03.052.052 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.235 13.235 0 0 0 4.001-2.02.049.049 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.034.034 0 0 0-.02-.019Zm-8.198 7.307c-.789 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612Zm5.316 0c-.788 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612Z"/>
                   </svg>
             </div>
+            <div class="group mb-[20px] px-3 -mt-[50px] mx-[200px]">
+                <a href="https://wa.me/12395869">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-whatsapp text-white bg-[#21212e] rounded-full p-2 group-hover:bg-[#793fff] group-hover:text-white cursor-pointer duration-150" viewBox="0 0 16 16">
+                        <path d="M11.857 1H4.143A3.145 3.145 0 0 0 1 4.143v7.714A3.145 3.145 0 0 0 4.143 15h7.714A3.145 3.145 0 0 0 15 11.857V4.143A3.145 3.145 0 0 0 11.857 1zm-4.24 11.457a5.233 5.233 0 0 1-2.942-.916L1.5 13.833l1.4-4.272a5.279 5.279 0 0 1-.844-2.88 5.294 5.294 0 0 1 .15-1.324L.62 2.633a.51.51 0 0 1 .64-.638l3.374.764A5.285 5.285 0 0 1 7.114.5a5.284 5.284 0 0 1 3.783 1.571A5.284 5.284 0 0 1 12.57 5.2a5.267 5.267 0 0 1-1.557 3.784L8.372 12.365c-.398.399-.843.677-1.318.806l-.51.197zm4.24-7.825a4.255 4.255 0 0 0-1.18.167l-1.825-.414-.962-1.021c-.33-.348-.63-.555-.953-.555-.312 0-.58.168-.804.492l-.549.657-.464-.123a4.218 4.218 0 0 0-2.11-.559 4.268 4.268 0 0 0-3.026 1.26 4.296 4.296 0 0 0-1.26 3.027c0 .662.154 1.304.448 1.888l-.142.577.522.48.47.439.518.48.591.133a4.203 4.203 0 0 0 1.717-.187l.574.336c.553.323 1.169.5 1.803.5a4.303 4.303 0 0 0 2.393-.722l.539-.326.645.156c.253.06.509.09.768.09a4.29 4.29 0 0 0 3.03-1.258 4.269 4.269 0 0 0"/>
+                    </svg>
+            </div>
+          
             <div class="absolute ml-[25px] m-auto left-0 right-0 sm:ml-[160px] md:mx-[200px] lg:ml-[350px] xl:ml-[500px] 2xl:ml-[580px]">
                 <p class="text-white mb-5 text-[13px] sm:text-[16px] md:text-[16px] lg:text-[16px] xl:text-[16px] 2xl:text-[16px]"><i class="bi bi-c-circle"></i> 2023 All rights reserved | Designed with 💜 by d3nnis</p>
             </div>
